welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: illegal start of simple expression
	for(l<- (-Ind) to -1)){
                             ^